[package]
name = "debuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garde = "0.11.2"
pbjson = "0.5.1"
pbjson-types = "0.5.1"
prost = "0.11.8"
serde = "1.0.152"
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }
